ajout de phpunit dans les dependances dev de composer

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
 		}
 	],
 	"require-dev" : {
-		"mysql-workbench-schema-exporter/mysql-workbench-schema-exporter" : "dev-master"
+		"mysql-workbench-schema-exporter/mysql-workbench-schema-exporter" : "dev-master",
+		"phpunit/phpunit" : "4.7.*"
 	}
 }
