--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,8 @@
 	],
 	"require-dev" : {
 		"mysql-workbench-schema-exporter/mysql-workbench-schema-exporter" : "dev-master",
-		"phpunit/phpunit" : "4.7.*"
+		"phpunit/phpunit" : "4.7.*",
+		"symfony/browser-kit" : "^2.7",
+		"symfony/css-selector" : "^2.7"
 	}
 }
