--- a/app/phpunit.xml.dist
+++ b/app/phpunit.xml.dist
@@ -15,4 +15,7 @@
             <directory>./../tests/</directory>
         </testsuite>
     </testsuites>
+    <php>
+        <env name="env" value="test" />
+    </php>
 </phpunit>
