--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,15 @@
 		"dflydev/doctrine-orm-service-provider" : "1.0.*",
 		"symfony/security" : "^2.7",
 		"jasongrimes/silex-simpleuser" : "^2.0",
-		"mysql-workbench-schema-exporter/mysql-workbench-schema-exporter" : "dev-master"
+		"mysql-workbench-schema-exporter/mysql-workbench-schema-exporter" : "dev-master",
+		"symfony/config" : "~2.7",
+		"symfony/validator" : "~2.7",
+		"symfony/translation" : "~2.7",
+		"symfony/form" : "~2.7",
+		"symfony/security-csrf" : "~2.7",
+		"symfony/locale" : "~2.7",
+		"symfony/doctrine-bridge" : "~2.7",
+		"saxulum/saxulum-doctrine-orm-manager-registry-provider" : "2.2.1@stable"
 	},
 	"autoload" : {
 		"psr-0" : {
