--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 		"symfony/security" : "^2.7",
 		"jasongrimes/silex-simpleuser" : "^2.0",
 		"mysql-workbench-schema-exporter/mysql-workbench-schema-exporter" : "dev-master",
-		"jdorn/sql-formatter": "^1.2"
+		"jdorn/sql-formatter": "^1.2",
 		"symfony/config" : "~2.7",
 		"symfony/validator" : "~2.7",
 		"symfony/translation" : "~2.7",
