Travail sur les formulaires du stock. Présentation du stock. Ajout de la possibilité d'utiliser les fragments http.

--- a/config/mwb_config.json
+++ b/config/mwb_config.json
@@ -14,6 +14,7 @@
         "useAutomaticRepository": false,
         "indentation": 4,
         "filename": "%entity%.%extension%",
-        "quoteIdentifier": false
+        "quoteIdentifier": false,
+        "skipColumnWithRelation": true
     }
 }
