Correction process d'installation
- le fichier de configuration indique l'environnement
- la vue "maintenance en cours" ne provoque plus d'erreur
- intégration de la config swiftmailer dans le fichier de config
- modification de composer.json pour utiliser symfony/yaml au lieu de
YamlConfigServiceProvider (symfony/yaml permet de générer le fichier
yaml, utile si l'on propose de configurer les accés à la base de données
via un formulaire pendant le process d'install)
- modification du bootstrap pour prendre en compte les changement
ci-dessus

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,9 @@
 		"symfony/locale" : "~2.7",
 		"symfony/doctrine-bridge" : "~2.7",
 		"saxulum/saxulum-doctrine-orm-manager-registry-provider" : "2.2.1@stable",
-		"deralex/yaml-config-service-provider" : "^1.0",
-		"swiftmailer/swiftmailer" : "5.*@stable"
+		"symfony/yaml" : "^2.5",
+		"swiftmailer/swiftmailer" : "5.*@stable",
+		"monolog/monolog" : "1.15.0@stable"
 	},
 	"autoload" : {
 		"psr-0" : {
@@ -38,7 +39,6 @@
 	"require-dev" : {
 		"mysql-workbench-schema-exporter/mysql-workbench-schema-exporter" : "dev-master",
 		"phpunit/phpunit" : "4.7.*",
-		"monolog/monolog" : "^1.14",
 		"symfony/browser-kit" : "^2.7",
 		"symfony/css-selector" : "^2.7"
 	}
