--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,13 +1,12 @@
-env:
-	env: prod
-	
+env: dev
+
 database:
     driver: pdo_mysql
     host: 127.0.0.1
     dbname: larpmanager
     user: myuser
     password: mypassword
-    
+
 swiftmailler:
    host: host
    port: 25
