--- a/config/test_settings.yml
+++ b/config/test_settings.yml
@@ -1,3 +1,6 @@
+env:
+	env: prod
+	
 database:
     driver: pdo_mysql #TODO resoudre le probleme de creation d'index pour passer en sqlite
     host: 127.0.0.1
@@ -6,4 +9,10 @@ database:
     password: 
     #memory: true #pour sqlite in memory (rapide !)
 
-db_install_path : /../tests/Temporary/
+swiftmailler:
+   host: host
+   port: 25
+   username: username
+   password: password
+   encryption: null
+   auth_mode: null
