correction de bugs

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
 		"deralex/yaml-config-service-provider" : "1.0.x-dev",
 		"swiftmailer/swiftmailer" : "5.*@stable",
 		"monolog/monolog" : "1.15.0@stable",
-		"nicl/silex-markdown" : "1.1.0"
+		"nicl/silex-markdown" : "1.1.0",
+		"jasongrimes/paginator" : "1.0"
 	},
 	"autoload" : {
 		"psr-0" : {
