ajout swiftmailer, début d'utilisation pour confirmer l'adresse mail des joueurs.

--- a/config/test_settings.yml
+++ b/config/test_settings.yml
@@ -9,7 +9,7 @@ database:
     password: 
     #memory: true #pour sqlite in memory (rapide !)
 
-swiftmailler:
+swiftmailer:
    host: host
    port: 25
    username: username
