--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,1 +1,1 @@
-{ env: dev, database: { host: 127.0.0.1, dbname: larpmanager, user: root, password: null }, swiftmailler: { host: host, port: 25, username: username, password: password, encryption: null, auth_mode: null } }
+{ env: dev, database: { host: 127.0.0.1, dbname: larpmanager,user: root, password: null }, swiftmailer: { host: host, port: 25, username: username, password: password, encryption: null, auth_mode: null, transport: sendmail }}
