--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,8 @@
 		}
 	],
 	"require-dev" : {
-		"mysql-workbench-schema-exporter/mysql-workbench-schema-exporter" : "dev-master",
+		"mysql-workbench-schema-exporter/mysql-workbench-schema-exporter" : "3.0.0",
+		"mysql-workbench-schema-exporter/doctrine2-exporter" : "3.0.0",
 		"phpunit/phpunit" : "4.7.*",
 		"symfony/browser-kit" : "^2.7",
 		"symfony/css-selector" : "^2.7"
