--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
 		"mysql-workbench-schema-exporter/doctrine2-exporter" : "3.0.0",
 		"phpunit/phpunit" : "4.7.*",
 		"symfony/browser-kit" : "^2.7",
-		"symfony/css-selector" : "^2.7"
+		"symfony/css-selector" : "^2.7",
+		"phpmetrics/phpmetrics" : "*"
 	}
 }
