Ajoute des attributs de compétences qui permettent de valoriser le nombre de langues, potions, sorts & prières.
Le détail de compétence permet de saisir ces attributs et de les
valoriser.

La fiche de personnage met en évidence les anomalies. Par exemple, on
affiche les sorts en trop ou manquant.

La grille des personnages a maintenant un marqueur Orange pour
identifier les personnages ayant une ou plusieurs anomalies. Le tooltip
de ce marqueur donne le détail depuis la grille de personnage.

Mise à jour du README.md pour documenter:
- La génération des Entity depuis .MWB
- La mise à jour du schéma MySQL avec Doctrine

--- a/config/mwb_config.json
+++ b/config/mwb_config.json
@@ -1,7 +1,7 @@
 {
     "export": "doctrine2-annotation",
     "zip": false,
-    "dir": "src/LarpManager/Entities",
+    "dir": "generate",
     "params": {
         "backupExistingFile": true,
         "skipPluralNameChecking": true,
