Correction d'erreurs sur les noms d'index dupliques (ne marche pas avec sql_lite, les noms d'index doivent etre uniques)
Documentation sur les tests, et possibilite de faire des tests
d'utilisateurs connectes avec differents droits

Changement de la version de phpunit dans Composer, et passage de silex
sur 1.* meme si dans les fait ça ne bougera jamais

--- a/config/test_settings.yml
+++ b/config/test_settings.yml
@@ -1,8 +1,8 @@
 env:
-	env: prod
-	
+    env: prod
+    
 database:
-    driver: pdo_mysql #TODO resoudre le probleme de creation d'index pour passer en sqlite
+    driver: pdo_mysql
     host: 127.0.0.1
     dbname: db_test
     user: root
