Les responsables des groupes secondaires voient maintenant chaque participant ayant changé de personnage comme "Pas inscrit" et non inscrit alors que leur personnage ne l'est pas. + merge

--- a/composer.json
+++ b/composer.json
@@ -48,5 +48,10 @@
 		"symfony/css-selector" : "^2.7",
 		"phpmetrics/phpmetrics" : "*",
 		"doctrine/data-fixtures" : "*"
+	},
+	"autoload-dev" : {
+		"psr-4" : {
+			"Tests\\" : "tests/"
+		}
 	}
 }
