--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,6 @@ composer.phar
 /database/larpmanager.mwb.bak
 /src/LarpManager/Entities/*.bak
 /cache/
-/generate/*.php
 composer.json.old
+/generate/
+.DS_Store
