--- a/web/.htaccess
+++ b/web/.htaccess
@@ -21,6 +21,10 @@
     Options -MultiViews
     RewriteEngine On
     #RewriteBase /larpmanager/web
+    
+    RewriteCond %{SERVER_PORT} 80
+    RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [QSA,L]
 </IfModule>
