--- a/config/normal_settings.yml
+++ b/config/normal_settings.yml
@@ -5,8 +5,8 @@ database:
     driver: pdo_mysql
     host: 127.0.0.1
     dbname: larpmanager
-    user: myuser
-    password: mypassword
+    user: admin
+    password: password
     
 swiftmailler:
    host: host
