Revert "Various small improvements"
This reverts commit 2b98e657d6ca840650f344ee17f7b86fa126a11c.

--- a/config/normal_settings.yml
+++ b/config/normal_settings.yml
@@ -5,8 +5,8 @@ database:
     driver: pdo_mysql
     host: 127.0.0.1
     dbname: larpmanager
-    user: admin
-    password: password
+    user: myuser
+    password: mypassword
     
 swiftmailler:
    host: host
